# L12

./: .env.example  .gitignore  CLAUDE.md  FEEDBACK.md  README.md  Taskfile.yml  pyproject.toml  tester.py
docs/: PRD.md
gmail_agent/: __init__.py  auth.py  display.py  gmail_client.py  main.py  nlp_parser.py
tests/: __init__.py  test_auth.py  test_display.py  test_gmail_client.py  test_main.py  test_nlp_parser.py
